@@ -96,7 +96,6 @@
 #include "src/slurmctld/state_save.h"
 #include "src/slurmctld/srun_comm.h"
 
-#define LAUNCH_DELAY_IGNORE	15
 #define MAX_RETRIES		100
 
 typedef enum {
@@ -198,7 +197,9 @@ static pthread_mutex_t agent_cnt_mutex = PTHREAD_MUTEX_INITIALIZER;
 static pthread_cond_t  agent_cnt_cond  = PTHREAD_COND_INITIALIZER;
 static int agent_cnt = 0;
 
-static bool run_scheduler = false;
+static bool run_scheduler    = false;
+static bool wiki2_sched      = false;
+static bool wiki2_sched_test = false;
 
 /*
  * agent - party responsible for transmitting an common RPC in parallel
@@ -224,6 +225,14 @@ void *agent(void *args)
 	     agent_cnt, MAX_AGENT_CNT, agent_arg_ptr->msg_type);
 #endif
 	slurm_mutex_lock(&agent_cnt_mutex);
+	if (!wiki2_sched_test) {
+		char *sched_type = slurm_get_sched_type();
+		if (strcmp(sched_type, "sched/wiki2") == 0)
+			wiki2_sched = true;
+		xfree(sched_type);
+		wiki2_sched_test = true;
+	}
+
 	while (1) {
 		if (slurmctld_config.shutdown_time ||
 		    (agent_cnt < MAX_AGENT_CNT)) {
@@ -1530,8 +1539,8 @@ static int _batch_launch_defer(queued_request_t *queued_req_ptr)
 	delay_time = difftime(now, job_ptr->start_time);
 	if (!IS_NODE_POWER_SAVE(node_ptr) && !IS_NODE_NO_RESPOND(node_ptr)) {
 		/* ready to launch, adjust time limit for boot time */
-		if ((job_ptr->time_limit != INFINITE) && 
-		    (delay_time > LAUNCH_DELAY_IGNORE)) {
+		if (delay_time && (job_ptr->time_limit != INFINITE) && 
+		    (!wiki2_sched)) {
 			info("Job %u launch delayed by %d secs, "
 			     "updating end_time", 
 			     launch_msg_ptr->job_id, delay_time);
@@ -1549,8 +1558,8 @@ static int _batch_launch_defer(queued_request_t *queued_req_ptr)
 		error("agent waited too long for node %s to respond, "
 		      "sending batch request anyway...",
 		      node_ptr->name);
-		if ((job_ptr->time_limit != INFINITE) && 
-		    (delay_time > LAUNCH_DELAY_IGNORE)) {
+		if (delay_time && (job_ptr->time_limit != INFINITE) && 
+		    (!wiki2_sched)) {
 			info("Job %u launch delayed by %d secs, "
 			     "updating end_time", 
 			     launch_msg_ptr->job_id, delay_time);
